fix: similarUtil 로직 수정